actually fixed the cutting off issue inside the chosen search fields. also made join meal form consistent with the create meal modal

--- a/app/assets/stylesheets/bootstrap_changes.css
+++ b/app/assets/stylesheets/bootstrap_changes.css
@@ -10,10 +10,6 @@ select,textarea,input[type="text"],input[type="password"],input[type="datetime"]
 .modal-backdrop{
   background-color: rgba(0,0,0,0.5);
 }
-.chosen-container{
-  height: 28px;
-}
-.chosen-container .chosen-choices{
-  height: 28px !important;
-  overflow-y: auto;
+.chosen-container-multi .chosen-choices li.search-field input[type="text"]{
+  height: auto;
 }
